* The "Pillage the city! Leave no heathen unscathed!" option of the "Capture of xyz" event now converts culture
* Halved autonomy gain from Foreign Quarter
* Added ai_importance and fixed up the ai_will_do blocks for decisions. Not sure how much of a difference it'll make, but we'll see.
* New Cyprus ideas loc, courtesy of UndeadWizard
* Made Rahulids Shia to reflect new lore
* Made Mamluk Sultan younger
* Made Rahulid a zealot and cruel
* Made Mamluk sultan careful and craven
* Bumped "Rhomaitokratia" merc maintenance modifer to -25% from -20%
* Lowered MTTH for Rahulid Berber raid event

v0.0.4:

+ Added events and a decision that allows the Rahulids to tame the desert
+ Added decisions and events around the establishment of a new Bulgarian Empire
+ Added Rum cores on Ar-Ruha
+ Added Mamluk cores on Malayta, Marash, and 'Antep
+ Added "Fortress of Tamiathis" modifier for the province of Damietta
+ Added "Capture of Cairo" event for Damietta
+ Added ability to form Egypt for Damietta if it controls Cairo and has admin tech 12

* Reinstated Rum cores in provinces 5130, 322, 4312, and 5168
* Fixed various localization inconsistencies in national ideas Thanks CouchCoach for the reports!
* Added modifier descriptions to "Inhabitants Expelled", "Jizya", and "Local Governor"
* Slight change to Defense of Bulgaria event, now fires earlier
* Tweaked Crusader Kingdom culture conversion cost malus

v0.0.3:
! First Steam Workshop release!


+ Added country history files for Montenegro and Bosnia
+ Added events for Muslim conquest of Tripoli, Damietta, and Jerusalem. These events fire once per game, so if Damietta is conquered by the Rahulids for example and then reconquered by Damietta and then re-reconquered by Rahulids, the event will not fire again. I hope that makes sense.

* Moved province 5277 (Batn-el-Hajar) from the Dongola trade node to the Damietta node
* Added historical friends for Montenegro, Bosnia, and Prilep

- Removed Venice's guarantee of Albania